--- a/src/components/MachineInfo/MachineInfo.module.css
+++ b/src/components/MachineInfo/MachineInfo.module.css
@@ -1,6 +1,3 @@
-.machine-info-wrap {
-  margin: 0 0 2rem;
-}
 .machine-condition {
   background: var(--window-trim);
   display: block;
